--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
   <body>
     <h1>hello</h1>
 
-    <div>coded by mosa</div>
+    <footer>
+      Coded by
+      <a
+        href="https://github.com/25Mishka/bluesky/commit/b0b1f1927fee722f59693e0efedc064daed474d5"
+      >
+        Mosa Mokebe
+      </a>
+      code
+      <a
+        href="https://github.com/25Mishka/bluesky/commit/b0b1f1927fee722f59693e0efedc064daed474d5"
+        >on GitHub</a
+      >
+      and website hosted on Netlify
+    </footer>
   </body>
 </html>
