--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
       >
         Mosa Mokebe
       </a>
-      code
+      code on
       <a
         href="https://github.com/25Mishka/bluesky/commit/b0b1f1927fee722f59693e0efedc064daed474d5"
-        >on GitHub</a
+        >GitHub</a
       >
-      and website hosted on Netlify
+      and hosted on Netlify
+      <a href="https://blueskyweathersite.netlify.app/"> </a>
     </footer>
   </body>
 </html>
