--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
       code on
       <a
         href="https://github.com/25Mishka/bluesky/commit/b0b1f1927fee722f59693e0efedc064daed474d5"
-        >GitHub</a
-      >
-      and hosted on Netlify
+        >GitHub
+      </a>
+
+      and hosted
       <a href="https://blueskyweathersite.netlify.app/"> </a>
     </footer>
   </body>
