--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </a>
 
       and hosted
-      <a href="https://blueskyweathersite.netlify.app/"> </a>
+      <a href="https://blueskyweathersite.netlify.app/"> on Netlify </a>
     </footer>
   </body>
 </html>
