--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
       </a>
 
       and hosted
-      <a href="https://blueskyweathersite.netlify.app/"> on Netlify </a>
+      <a href="https://app.netlify.com/sites/blueskyweathersite/overview">
+        on Netlify
+      </a>
     </footer>
   </body>
 </html>
