--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Blueskyweather app</title>
   </head>
   <body>
-    <h1>hello</h1>
+    <header>
+      <input type="search" placeholder="Enter a city.." required />
+      <input type="submit" value="Search" />
+    </header>
+    <h1>Paris</h1>
 
     <footer>
       Coded by
