--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
       <input type="search" placeholder="Enter a city.." required />
       <input type="submit" value="Search" />
     </header>
+
     <h1>Paris</h1>
 
+    <p>
+      Tuesday 16:45, clouds
+
+      <br />
+      Humidity : 50% , Wind: 15.2 km/h
+    </p>
     <footer>
       Coded by
       <a
