--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
       <input type="submit" value="Search" />
     </header>
 
-    <h1>Paris</h1>
+    <main>
+      <h1>Paris</h1>
 
-    <p>
-      Tuesday 16:45, clouds
+      <p>
+        Tuesday 16:45, clouds
 
-      <br />
-      Humidity : 50% , Wind: 15.2 km/h
-    </p>
+        <br />
+        Humidity : 50% , Wind: 15.2 km/h
+      </p>
+
+      12
+    </main>
+
     <footer>
       Coded by
       <a
