--- a/index.html
+++ b/index.html
@@ -13,37 +13,43 @@
     </header>
 
     <main>
-      <h1>Paris</h1>
+      <div class="container">
+        <div class="cityname">
+          <h1>Paris</h1>
+        </div>
 
-      <p>
-        Tuesday 16:45, clouds
+        <div class="weather-info">
+          <p>
+            Tuesday 16:45, clouds
+
+            <br />
+            Humidity : 50% , Wind: 15.2 km/h
+          </p>
+        </div>
+
+        <div>☁️ 12°C</div>
 
         <br />
-        Humidity : 50% , Wind: 15.2 km/h
-      </p>
-
-      <div>☁️ 12°C</div>
-
-      <br />
+      </div>
     </main>
-
-    <footer>
-      Coded by
-      <a
-        href="https://github.com/25Mishka/bluesky/commit/b0b1f1927fee722f59693e0efedc064daed474d5"
-      >
-        Mosa Mokebe
-      </a>
-      code on
-      <a
-        href="https://github.com/25Mishka/bluesky/commit/b0b1f1927fee722f59693e0efedc064daed474d5"
-        >GitHub
-      </a>
-
-      and hosted
-      <a href="https://app.netlify.com/sites/blueskyweathersite/overview">
-        on Netlify
-      </a>
-    </footer>
   </body>
+
+  <footer>
+    Coded by
+    <a
+      href="https://github.com/25Mishka/bluesky/commit/b0b1f1927fee722f59693e0efedc064daed474d5"
+    >
+      Mosa Mokebe
+    </a>
+    code on
+    <a
+      href="https://github.com/25Mishka/bluesky/commit/b0b1f1927fee722f59693e0efedc064daed474d5"
+      >GitHub
+    </a>
+
+    and hosted
+    <a href="https://app.netlify.com/sites/blueskyweathersite/overview">
+      on Netlify
+    </a>
+  </footer>
 </html>
