styled button and search bar

--- a/index.html
+++ b/index.html
@@ -8,9 +8,19 @@
   </head>
   <body>
     <div class="container">
-      <header>
-        <input type="search" placeholder="Enter a city.." required />
-        <input type="submit" value="Search" />
+      <header >
+        <form class="search-bar">
+          <input 
+               type="search"  
+               placeholder="Enter a city.." 
+               required class="search-bar-input" 
+         />
+         <input
+               type="submit"  
+               value="Search" 
+              class="search-bar-button"
+         />
+         <form/>
       </header>
 
       <main>
