added class for weather-info, added css to it

--- a/index.html
+++ b/index.html
@@ -24,25 +24,39 @@
       </header>
 
       <main>
-        <div class="cityname">
-          <h1>Paris</h1>
+        <div class="city-container">
+          <div>
+               <h1 class="city-container-name">  Paris    </h1>
+           
+
+              <div class="weather-info">
+                  <p>
+
+                     Tuesday 16:45, 
+
+                     <br />
+                      Humidity : <strong> 50% </strong> ,
+
+                     <br/>
+                     Wind: <strong> 15.2 km/h </strong>,
+
+                     <br/>
+                     Clouds,
+            
+                  </p>
+              </div>
+
+          </div>
+
+            <div>☁️ 12°C</div>
+
         </div>
-
-        <div class="weather-info">
-          <p>
-            Tuesday 16:45, clouds
-
-            <br />
-            Humidity : 50% , Wind: 15.2 km/h
-          </p>
-        </div>
-
-        <div>☁️ 12°C</div>
-
         <br />
       </main>
     </div>
   </body>
+
+
 
   <footer>
     Coded by
@@ -62,4 +76,5 @@
       on Netlify
     </a>
   </footer>
+
 </html>
