--- a/index.html
+++ b/index.html
@@ -8,55 +8,51 @@
   </head>
   <body>
     <div class="container">
-      <header >
+      <header>
         <form class="search-bar">
-          <input 
-               type="search"  
-               placeholder="Enter a city.." 
-               required class="search-bar-input" 
-         />
-         <input
-               type="submit"  
-               value="Search" 
-              class="search-bar-button"
-         />
-         <form/>
+          <input
+            type="search"
+            placeholder="Enter a city.."
+            required
+            class="search-bar-input"
+          />
+          <input type="submit" value="Search" class="search-bar-button" />
+        </form>
       </header>
 
       <main>
         <div class="city-container">
           <div>
-               <h1 class="city-container-name">  Paris    </h1>
-           
+            <h1 class="city-container-name">Paris</h1>
 
-              <div class="weather-info">
-                  <p>
+            <div class="weather-info">
+              <p>
+                Tuesday 16:45,
 
-                     Tuesday 16:45, 
+                <br />
+                Humidity : <strong> 50% </strong> ,
 
-                     <br />
-                      Humidity : <strong> 50% </strong> ,
+                <br />
+                Wind: <strong> 15.2 km/h </strong>,
 
-                     <br/>
-                     Wind: <strong> 15.2 km/h </strong>,
-
-                     <br/>
-                     Clouds,
-            
-                  </p>
-              </div>
-
+                <br />
+                Clouds
+              </p>
+            </div>
           </div>
 
-            <div>☁️ 12°C</div>
+          <div class="degree-container">
+            <div class="degree-icon">☁️</div>
 
+            <div class="degree-nr">12</div>
+
+            <div class="degree">°C</div>
+          </div>
         </div>
         <br />
       </main>
     </div>
   </body>
-
-
 
   <footer>
     Coded by
@@ -76,5 +72,4 @@
       on Netlify
     </a>
   </footer>
-
 </html>
