move footer inside body

--- a/index.html
+++ b/index.html
@@ -52,24 +52,26 @@
         <br />
       </main>
     </div>
+
+    <footer>
+      Coded by
+      <a
+        href="https://github.com/25Mishka/bluesky/commit/b0b1f1927fee722f59693e0efedc064daed474d5"
+      >
+        Mosa Mokebe
+      </a>
+      code on
+      <a
+        href="https://github.com/25Mishka/bluesky/commit/b0b1f1927fee722f59693e0efedc064daed474d5"
+        >GitHub
+      </a>
+
+      and hosted
+      <a href="https://app.netlify.com/sites/blueskyweathersite/overview">
+        on Netlify
+      </a>
+    </footer>
+
+    <script src="src/index.js"></script>
   </body>
-
-  <footer>
-    Coded by
-    <a
-      href="https://github.com/25Mishka/bluesky/commit/b0b1f1927fee722f59693e0efedc064daed474d5"
-    >
-      Mosa Mokebe
-    </a>
-    code on
-    <a
-      href="https://github.com/25Mishka/bluesky/commit/b0b1f1927fee722f59693e0efedc064daed474d5"
-      >GitHub
-    </a>
-
-    and hosted
-    <a href="https://app.netlify.com/sites/blueskyweathersite/overview">
-      on Netlify
-    </a>
-  </footer>
 </html>
