--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   <body>
     <div class="container">
       <header>
-        <form class="search-bar">
+        <form class="search-bar" id="search-bar">
           <input
             type="search"
             placeholder="Enter a city.."
             required
+            id="search-bar-input"
             class="search-bar-input"
           />
           <input type="submit" value="Search" class="search-bar-button" />
@@ -23,7 +24,7 @@
       <main>
         <div class="city-container">
           <div>
-            <h1 class="city-container-name">Paris</h1>
+            <h1 class="city-container-name" id="city">Paris</h1>
 
             <div class="weather-info">
               <p>
@@ -44,9 +45,11 @@
           <div class="degree-container">
             <div class="degree-icon">☁️</div>
 
-            <div class="degree-nr">12</div>
+            <div class="temperature">
+              <div class="degree-nr">12</div>
 
-            <div class="degree">°C</div>
+              <div class="degree">°C</div>
+            </div>
           </div>
         </div>
         <br />
