changed from div to span
 changed html for degree-nr and degree from div to span

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             <div class="degree-icon">☁️</div>
 
             <div class="temperature">
-              <div class="degree-nr">12</div>
+              <span class="degree-nr">12</span>
 
-              <div class="degree">°C</div>
+              <span class="degree">°C</span>
             </div>
           </div>
         </div>
