added strong on the times

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <div class="weather-info">
               <p>
-                Tuesday 16:45,
+                Tuesday <strong> 16:45 </strong>,
 
                 <br />
                 Humidity : <strong> 50% </strong> ,
