--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/index.css" />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Blueskyweather app</title>
   </head>
   <body>
@@ -37,6 +38,7 @@
                 Wind: <strong> 15.2 km/h </strong>,
 
                 <br />
+
                 Clouds
               </p>
             </div>
