removed and added desriptions

--- a/index.html
+++ b/index.html
@@ -25,30 +25,30 @@
       <main>
         <div class="city-container">
           <div>
-            <h1 class="city-container-name" id="city">Paris</h1>
+            <h1 class="city-container-name" id="city"></h1>
 
             <div class="weather-info">
               <p>
-                Tuesday <strong> 16:45 </strong>,
+                <span id="time"> 12:00 </span>,
 
                 <br />
-                Humidity : <strong> 50% </strong> ,
+                Humidity : <strong id="humidity"> </strong> ,
 
                 <br />
-                Wind: <strong> 15.2 km/h </strong>,
+                Wind: <strong id="wind-speed"> </strong>,
 
                 <br />
 
-                Clouds
+                <span id="description"></span>
               </p>
             </div>
           </div>
 
           <div class="degree-container">
-            <div class="degree-icon">☁️</div>
+            <div id="icon"></div>
 
             <div class="temperature">
-              <span class="degree-nr">12</span>
+              <span class="degree-nr" id="temperatures"> </span>
 
               <span class="degree">°C</span>
             </div>
