added github url

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <div class="weather-info">
               <p>
-                <span id="time"> 12:00 </span>,
+                <span id="time"> </span>,
 
                 <br />
                 Humidity : <strong id="humidity"> </strong> ,
@@ -60,11 +60,7 @@
 
     <footer>
       Coded by
-      <a
-        href="https://github.com/25Mishka/bluesky/commit/b0b1f1927fee722f59693e0efedc064daed474d5"
-      >
-        Mosa Mokebe
-      </a>
+      <a href="https://github.com/25Mishka"> Mosa Mokebe </a>
       code on
       <a
         href="https://github.com/25Mishka/bluesky/commit/b0b1f1927fee722f59693e0efedc064daed474d5"
